@@ -324,6 +324,27 @@ check $x $y\n\
             checkEqual(p.findGroup("base").find("z").asInt(),3,"z is ok");
             checkEqual(p.findGroup("base").find("w").asInt(),4,"w is ok");
         }
+
+        {
+            ofstream fout1(fname1);
+            fout1 << "x 1" << endl;
+            fout1.close();
+            ofstream fout2(fname2);
+            fout2 << "[b1]" << endl;
+            fout2 << "z 3" << endl;
+            fout2 << "[include base b1 " << fname1 << "]" << endl;
+            fout2 << "[include base b2 " << fname1 << "]" << endl;
+            fout2 << "y 2" << endl;
+            fout2.close();
+            Property p;
+            p.fromConfigFile(fname2);
+            checkEqual(p.findGroup("b1").find("x").asInt(),1,"x is ok");
+            checkEqual(p.findGroup("base").get(1).asString().c_str(),
+                       "b1","list element 1 is ok");
+            checkEqual(p.findGroup("b2").find("x").asInt(),1,"x is ok");
+            checkEqual(p.findGroup("base").get(2).asString().c_str(),
+                       "b2","list element 2 is ok");
+        }
     }
 
 
